crates/journalint/src/snapshots/journalint__snapshot_tests__parse-error-empty-file.snap
---
source: crates/journalint/src/main.rs
expression: diagnostics
---
- range:
    start:
      line: 0
      character: 0
    end:
      line: 0
      character: 0
  severity: 2
  code: parse-error
  source: journalint
  message: "Parse error: found end of input but expected \"-\""
